--- a/src/components/main-page/categories/categories.module.css
+++ b/src/components/main-page/categories/categories.module.css
@@ -7,5 +7,6 @@
 }
 
 .item {
+  position: relative;
   list-style-type: none;
 }
