--- a/src/components/main-page/category/category.module.css
+++ b/src/components/main-page/category/category.module.css
@@ -1,7 +1,8 @@
 .category {
-  position: relative;
+  position: absolute;
   display: block;
-  height: 100%;
+  min-height: var(--card-height);
+  width: 100%;
   text-decoration: none;
   border-radius: 5px;
   box-shadow: var(--shadow);
@@ -39,16 +40,12 @@
   background: var(--gradient-play-reverse);
 }
 
-.category:active {
-  opacity: 0.8;
-}
-
 .wrapper {
   position: relative;
   top: 15px;
-  left: calc(50% - 90px);
-  width: 180px;
-  height: 180px;
+  left: calc(50% - 80px);
+  width: 160px;
+  height: 160px;
   background-color: var(--background-default);
   border-radius: 50%;
 }
@@ -57,19 +54,39 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  width: 160px;
-  height: 160px;
+  width: 140px;
+  height: 140px;
   object-fit: cover;
   object-position: 50% 50%;
   border-radius: 50%;
 }
 
+.inner {
+  overflow-x: scroll;
+  padding: 4px;
+}
+
+.inner::-webkit-scrollbar {
+  height: 5px;
+}
+
+.inner::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #030a0f;
+}
+
+.inner::-webkit-scrollbar-track {
+  box-shadow: 5px 5px 5px -5px rgb(34 60 80 / 20%) inset;
+  border-radius: 5px;
+  background-color: #f9f9fd;
+}
+
 .text {
   margin: 0;
-  margin-top: 10px;
-  padding: 10px;
-  word-wrap: break-word;
+  margin-top: 20px;
+  padding: 0 5px;
   text-align: center;
+  white-space: nowrap;
   text-transform: capitalize;
   color: var(--font-dark);
 }
